force-app/main/default/objects/Campaign__c/Campaign__c.object-meta.xml
<CustomObject>
    <label>Campaign</label>
    <nameField>
        <label>Campagin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>