force-app/main/default/objects/Campaign__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(End_Date__c)), End_Date__c &gt;= TODAY(), Start_Date__c &lt;= TODAY(), Text(Approval_Status__c) = &quot;Approved&quot;), true,
IF(AND(ISBLANK(End_Date__c), Start_Date__c &lt;= TODAY(), Text(Approval_Status__c) = &quot;Approved&quot;), true, false))</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>