force-app/main/default/objects/Campaign__c/fields/Actual_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Actual_Bookings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>