force-app/main/default/objects/Campaign__c/fields/Actual_Enquiries__c.field-meta.xml
<CustomField>
    <fullName>Actual_Enquiries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Enquiries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>