force-app/main/default/objects/Campaign__c/fields/Actual_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Actual_Opportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>