force-app/main/default/objects/Campaign__c/fields/Approve_Reject_By__c.field-meta.xml
<CustomField>
    <fullName>Approve_Reject_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approve/Reject By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>