force-app/main/default/objects/Campaign__c/fields/Approve_Reject_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Approve_Reject_DateTime__c</fullName>
    <label>Approve/Reject DateTime</label>
    <type>DateTime</type>
</CustomField>