force-app/main/default/objects/Campaign__c/fields/Campaign_Approver__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>