force-app/main/default/objects/Campaign__c/fields/Converted_Leads_Count__c.field-meta.xml
<CustomField>
    <fullName>Converted_Leads_Count__c</fullName>
    <label>Converted Leads Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>