force-app/main/default/objects/Campaign__c/fields/Cost_Per_Booking_CPB__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Booking_CPB__c</fullName>
    <formula>Actual_Cost__c  /  Booking_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Per Booking (CPB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>