force-app/main/default/objects/Campaign__c/fields/Cost_per_Enquiry_CPE__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Enquiry_CPE__c</fullName>
    <formula>Actual_Cost__c / Actual_Enquiries__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per Enquiry (CPE)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>