force-app/main/default/objects/Campaign__c/fields/Cost_per_Lead_CPL__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Lead_CPL__c</fullName>
    <formula>Actual_Cost__c / Actual_Leads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per Lead (CPL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>