force-app/main/default/objects/Campaign__c/fields/Cost_Per_Visit_CPV__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Visit_CPV__c</fullName>
    <formula>Actual_Cost__c / Actual_Visits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per Visit (CPV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>