force-app/main/default/objects/Campaign__c/fields/CPB__c.field-meta.xml
<CustomField>
    <fullName>CPB__c</fullName>
    <formula>Actual_Cost__c /  Actual_Bookings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>