force-app/main/default/objects/Campaign__c/fields/CPE__c.field-meta.xml
<CustomField>
    <fullName>CPE__c</fullName>
    <formula>Actual_Cost__c  /  Actual_Enquiries__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>