force-app/main/default/objects/Campaign__c/fields/CPL__c.field-meta.xml
<CustomField>
    <fullName>CPL__c</fullName>
    <formula>Actual_Cost__c  /   Actual_Leads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>