force-app/main/default/objects/Campaign__c/fields/CPV__c.field-meta.xml
<CustomField>
    <fullName>CPV__c</fullName>
    <formula>Actual_Cost__c /  Actual_Visits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>