force-app/main/default/objects/Campaign__c/fields/Is_CTI_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Is_CTI_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CTI Campaign?</label>
    <type>Checkbox</type>
</CustomField>