force-app/main/default/objects/Campaign__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>IF( ISPICKVAL( Approver_Status__c , &apos;Approved&apos;) , AND((Start_Date__c &lt;= TODAY()), OR((TODAY()&lt;= End_Date__c),isblank (End_Date__c))) ,false )</formula>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>