force-app/main/default/objects/Campaign__c/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Google Display</fullName>
            </value>
            <value>
                <fullName>YouTube</fullName>
            </value>
            <value>
                <fullName>Discovery Ads</fullName>
            </value>
            <value>
                <fullName>Lead Gen Form</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Web Conversion</fullName>
            </value>
            <value>
                <fullName>MagicBricks</fullName>
            </value>
            <value>
                <fullName>NoBroker</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>99Acres</fullName>
            </value>
            <value>
                <fullName>Corporate Website</fullName>
            </value>
            <value>
                <fullName>ORM</fullName>
            </value>
            <value>
                <fullName>Jacket</fullName>
            </value>
            <value>
                <fullName>Power Jacket</fullName>
            </value>
            <value>
                <fullName>Full Page</fullName>
            </value>
            <value>
                <fullName>Half Page</fullName>
            </value>
            <value>
                <fullName>Inserts</fullName>
            </value>
            <value>
                <fullName>RJ Mentions</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Show Sponsorship</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Bus Shelter</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>Cantilever</fullName>
            </value>
            <value>
                <fullName>Gantry</fullName>
            </value>
            <value>
                <fullName>Mobile Van</fullName>
            </value>
            <value>
                <fullName>Bus Panel</fullName>
            </value>
            <value>
                <fullName>Railway Station Boards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>