force-app/main/default/objects/Campaign__c/fields/Offline_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Offline_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It is used In case of Mobile User</inlineHelpText>
    <label>Offline Campaign</label>
    <type>Checkbox</type>
</CustomField>