force-app/main/default/objects/Campaign__c/fields/Ozontel_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Ozontel_Campaign_Name__c</fullName>
    <inlineHelpText>It is used for CTI Campaign for Ozontel</inlineHelpText>
    <label>Ozontel Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>