force-app/main/default/objects/Campaign__c/fields/Performance_measure_on__c.field-meta.xml
<CustomField>
    <fullName>Performance_measure_on__c</fullName>
    <label>Performance measure on</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>