force-app/main/default/objects/Campaign__c/fields/Planned_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Planned_Bookings__c</fullName>
    <label>Planned Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>