force-app/main/default/objects/Campaign__c/fields/Planned_Cost__c.field-meta.xml
<CustomField>
    <fullName>Planned_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Planned Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>