force-app/main/default/objects/Campaign__c/fields/Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Source_Description__c</fullName>
    <label>Source Description</label>
    <type>TextArea</type>
</CustomField>