force-app/main/default/objects/Campaign__c/fields/Targeted_CPL__c.field-meta.xml
<CustomField>
    <fullName>Targeted_CPL__c</fullName>
    <formula>Budgeted_Cost__c  /  Targeted_Leads__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Targeted CPL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>