force-app/main/default/objects/Campaign__c/fields/Virtual_Number__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Number__c</fullName>
    <label>Virtual Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>