force-app/main/default/objects/Campaign__c/validationRules/End_Date_greater_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_greater_than_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>DATETIMEVALUE( Start_Date__c )  &gt; DATETIMEVALUE( End_Date__c )</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Start Date should be less than End Date</errorMessage>
</ValidationRule>