force-app/main/default/objects/Campaign__c/validationRules/End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date Should be Less than Today</errorMessage>
</ValidationRule>