force-app/main/default/objects/Campaign__c/listViews/Active_Campagin.listView-meta.xml
<ListView>
    <fullName>Active_Campagin</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Actual_Leads__c</columns>
    <columns>IsActive__c</columns>
    <columns>Actual_Enquiries__c</columns>
    <columns>Actual_Visits__c</columns>
    <columns>Actual_Bookings__c</columns>
    <columns>Campaign_Code__c</columns>
    <columns>Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Virtual_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Campaign</label>
</ListView>