force-app/main/default/objects/Campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Source__c</columns>
    <columns>Active__c</columns>
    <columns>Project__c</columns>
    <columns>Is_CTI_Campaign__c</columns>
    <columns>Virtual_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>