force-app/main/default/objects/Campaign__c/listViews/All_Active_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Active_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Active__c</columns>
    <columns>Is_CTI_Campaign__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Campaigns</label>
</ListView>