force-app/main/default/objects/Campaign__c/listViews/All_Inactive_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Inactive_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Is_CTI_Campaign__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Inactive Campaigns</label>
</ListView>