force-app/main/default/objects/Campaign__c/listViews/CTI_Active_Campaign.listView-meta.xml
<ListView>
    <fullName>CTI_Active_Campaign</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>IsActive__c</columns>
    <columns>Project__c</columns>
    <columns>Ozontel_Campaign_Name__c</columns>
    <columns>Virtual_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_CTI_Campaign__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CTI Active Campaign</label>
</ListView>